feat: add localization for nav tabs

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -5,5 +5,8 @@
     "teamsList": "Teams List",
     "teamDetails": "Team Details",
     "heroesList": "Heroes List",
-    "heroDetails": "Hero Details"
+    "heroDetails": "Hero Details",
+    "matchesTab": "Matches",
+    "heroesTab": "Heroes",
+    "teamsTab": "Teams"
 }
