--- a/lib/l10n/arb/app_uk.arb
+++ b/lib/l10n/arb/app_uk.arb
@@ -5,5 +5,8 @@
     "teamsList": "Список команд",
     "teamDetails": "Деталі команд",
     "heroesList": "Список героїв",
-    "heroDetails": "Деталі героя"
+    "heroDetails": "Деталі героя",
+    "matchesTab": "Матчі",
+    "heroesTab": "Герої",
+    "teamsTab": "Команди"
 }
