--- a/lib/l10n/arb/app_uk.arb
+++ b/lib/l10n/arb/app_uk.arb
@@ -3,9 +3,8 @@
     "matchesList": "Список матчів",
     "matchDetails": "Деталі матчу",
     "teamsList": "Список команд",
-    "teamDetails": "Деталі команд",
+    "teamDetails": "Деталі команди",
     "heroesList": "Список героїв",
-    "heroDetails": "Деталі героя",
     "matchesTab": "Матчі",
     "heroesTab": "Герої",
     "teamsTab": "Команди"
