refactoring: refactor team_detail

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -7,5 +7,6 @@
     "heroesList": "Heroes List",
     "matchesTab": "Matches",
     "heroesTab": "Heroes",
-    "teamsTab": "Teams"
+    "teamsTab": "Teams",
+    "players": "Players"
 }
