--- a/lib/l10n/arb/app_uk.arb
+++ b/lib/l10n/arb/app_uk.arb
@@ -7,5 +7,6 @@
     "heroesList": "Список героїв",
     "matchesTab": "Матчі",
     "heroesTab": "Герої",
-    "teamsTab": "Команди"
+    "teamsTab": "Команди",
+    "players": "Гравці"
 }
