fix: add localization

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -15,6 +15,7 @@
     "roles": "Roles",
     "score": "score",
     "match": "Match",
-    "duration": "Duration"
+    "duration": "Duration",
+    "viewallplayers": "View all players"
 
 }
