--- a/lib/l10n/arb/app_uk.arb
+++ b/lib/l10n/arb/app_uk.arb
@@ -15,6 +15,6 @@
     "roles": "Ролі",
     "score": "рахунок",
     "match": "Матч",
-    "duration": "Тривалість"
-
+    "duration": "Тривалість",
+    "viewallplayers": "Показати всіх гравців"
 }
