feat: add proPlayersList in router

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -16,6 +16,7 @@
     "score": "score",
     "match": "Match",
     "duration": "Duration",
-    "viewallplayers": "View all players"
+    "viewallplayers": "View all players",
+    "home": "Home"
 
 }
