--- a/lib/l10n/arb/app_uk.arb
+++ b/lib/l10n/arb/app_uk.arb
@@ -16,5 +16,6 @@
     "score": "рахунок",
     "match": "Матч",
     "duration": "Тривалість",
-    "viewallplayers": "Показати всіх гравців"
+    "viewallplayers": "Показати всіх гравців",
+    "home": "Головна"
 }
