feat: add search players

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -17,6 +17,8 @@
     "match": "Match",
     "duration": "Duration",
     "viewallplayers": "View all players",
-    "home": "Home"
+    "home": "Home",
+    "searchAccount": "Search an account",
+    "topPlayers": "Top players"
 
 }
