--- a/lib/l10n/arb/app_uk.arb
+++ b/lib/l10n/arb/app_uk.arb
@@ -17,5 +17,7 @@
     "match": "Матч",
     "duration": "Тривалість",
     "viewallplayers": "Показати всіх гравців",
-    "home": "Головна"
+    "home": "Головна",
+    "searchAccount": "Пошук акаунта",
+    "topPlayers": "Найкращі гравці"
 }
