feat: add navigation to playerDetailsPage

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -19,6 +19,7 @@
     "viewallplayers": "View all players",
     "home": "Home",
     "searchAccount": "Search an account",
-    "topPlayers": "Top players"
+    "topPlayers": "Top players",
+    "searchResults": "Search Results"
 
 }
