--- a/lib/l10n/arb/app_uk.arb
+++ b/lib/l10n/arb/app_uk.arb
@@ -19,5 +19,6 @@
     "viewallplayers": "Показати всіх гравців",
     "home": "Головна",
     "searchAccount": "Пошук акаунта",
-    "topPlayers": "Найкращі гравці"
+    "topPlayers": "Найкращі гравці",
+    "searchResults": "Результати Пошуку"
 }
