--- a/lib/l10n/arb/app_uk.arb
+++ b/lib/l10n/arb/app_uk.arb
@@ -20,7 +20,7 @@
     "home": "Головна",
     "searchAccount": "Пошук акаунта",
     "topPlayers": "Найкращі гравці",
-    "searchResults": "Результати Пошуку",
+    "searchResults": "Результати пошуку",
     "generalInfo": "Загальні відомості",
     "recentMatches": "Останні матчі",
     "recentMatchWas": "Дата останнього матчу: ",
