feat: add dotaSearchAppBar

--- a/lib/l10n/arb/app_uk.arb
+++ b/lib/l10n/arb/app_uk.arb
@@ -18,7 +18,7 @@
     "duration": "Тривалість",
     "viewallplayers": "Показати всіх гравців",
     "home": "Головна",
-    "searchAccount": "Пошук акаунта",
+    "searchAccount": "Знайти акаунт",
     "topPlayers": "Найкращі гравці",
     "searchResults": "Результати пошуку",
     "generalInfo": "Загальні відомості",
