fix: fix theme.of(context) & complete error widget

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -41,5 +41,6 @@
     "matchups": "Matchups",
     "gamesPlayed": "Games played:",
     "winRate": "Win Rate:",
-    "matchesWith": "Matches with"
+    "matchesWith": "Matches with",
+    "errorMessage": "Oops, something went wrong :("
 }
